# data-engineering-zoomcamp

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
hw1-docker-terraform/: README.md  docker-compose.yaml  ingest_rides.py  ingest_zones.py
hw2-workflow-orchestration/: README.md  docker-compose.yaml
hw3-data-warehouse/: README.md  load_yellow_taxi_data.py
